# mav

./: LICENSE  README.md  documentation.md  mav.py  openmav.py  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: openmav.ipynb  openmav_external_plugin_examples.ipynb  test_first_step.py  test_plugin_fire_entropy.py  test_plugin_random.py  test_vis_train_loop.py  vis_train_loop.py
mav-web/: .gitignore  DEPLOYMENT.md  README.md  SUMMARY.md  USAGE.md  deploy.sh  package-lock.json  package.json  tailwind.config.ts  vercel.json
mav-web/src/app/: layout.tsx  page.tsx
mav-web/src/components/: MAVContainer.tsx
mav-web/src/components/panels/: AttentionEntropyPanel.tsx  GeneratedTextPanel.tsx  MlpActivationsPanel.tsx  OutputDistributionPanel.tsx  PanelBase.tsx  TopPredictionsPanel.tsx
mav-web/src/types/: mav.ts
mav-web/vercel_python_api/: requirements.txt  run.py
openmav/: mav.py
openmav/api/: measurements.py
openmav/backends/: model_backend.py  model_backend_transformers.py
openmav/converters/: data_converter.py
openmav/processors/: data_processor.py  state_fetcher.py  state_processor.py
openmav/view/: console_view.py  main_loop_manager.py
openmav/view/panels/: internal_panels.py  panel_base.py  panel_creator.py  panel_provider.py
openmav/visualisers/: visualiser_console.py
